--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,10 @@ main {
 }
 
 .header .logo img {
-    max-height: 60px;
+    max-height: 200px; /* Aumenta o tamanho da logo */
+    width: auto; /* Mantém a proporção da largura */
 }
+
 
 .header .icons a {
     padding: 10px 0;
