--- a/css/cart.css
+++ b/css/cart.css
@@ -159,28 +159,30 @@ main {
 }
 
 /* Responsividade */
-@media (max-width: 768px) {
-    .header {
-        flex-direction: column;
-        align-items: center;
+@media (max-width: 480px) {
+    .header .logo img {
+        max-height: 80px;
     }
 
-    .table img {
-        max-height: 50px;
+    .header .icons img {
+        max-height: 25px;
     }
 
-    .table td {
-        font-size: 0.8rem;
+    .menu-links li {
+        font-size: 1rem;
     }
 
-    .total-container {
-        flex-direction: column;
-        align-items: flex-start;
+    .social-icons a img {
+        width: 20px;
+        height: 20px;
     }
 
-    .total-container .btn-success {
-        width: 100%;
-        text-align: center;
-        margin-top: 15px;
+    .card img {
+        height: 200px;
+    }
+
+    form input {
+        max-width: 200px;
     }
 }
+
