--- a/css/cart.css
+++ b/css/cart.css
@@ -30,7 +30,7 @@ main {
     justify-content: center;
     align-items: center;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    height: 100px; /* Ajuste fixo do tamanho do cabeçalho */
+    height: 120px;
 }
 
 .header .logo {
@@ -41,7 +41,7 @@ main {
 }
 
 .header .logo img {
-    max-height: 80px; /* Ajuste da altura da logo */
+    max-height: 150px; 
     height: auto;
     width: auto;
     transition: max-height 0.3s ease;
