--- a/css/style.css
+++ b/css/style.css
@@ -246,8 +246,11 @@ form button:hover {
     background: linear-gradient(200deg, #3b261b, #a85f38);
     color: white;
     text-align: center;
-    padding: 10px 0;
+    padding: 15px 0;
+    position: relative;
+    bottom: 0;
     width: 100%;
+    margin-top: auto;
 }
 
 /* Responsividade */
