--- a/css/styles.css
+++ b/css/styles.css
@@ -8,15 +8,21 @@
 body {
     font-family: 'Arial', sans-serif;
     line-height: 1.6;
-    background-color: #f8f9fa;
+    background: url('images/fundo-textura.jpg') no-repeat center center fixed; /* Caminho da sua imagem de fundo */
+    background-size: cover; /* Ajuste para cobrir toda a tela */
     color: #333;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
 }
 
+
 main {
     flex: 1;
+    padding: 40px 20px; /* Espaçamento ao redor do conteúdo principal */
+    background: rgba(255, 255, 255, 0.8); /* Fundo branco com transparência */
+    border-radius: 10px; /* Bordas arredondadas */
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); /* Sombras leves para destacar */
 }
 
 /* Cabeçalho */
@@ -31,7 +37,9 @@ main {
     align-items: center;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
-
+header {
+    margin-bottom: 40px; /* Espaço maior abaixo do cabeçalho */
+}
 .header .menu-button {
     font-size: 1.2rem;
     color: white;
