--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 body {
     font-family: 'Arial', sans-serif;
     line-height: 1.6;
-    background: url('images/fundo-textura.jpg') no-repeat center center fixed; /* Caminho da sua imagem de fundo */
+    background: url('../images/fundo-textura.jpg') no-repeat center center fixed; /* Caminho da sua imagem de fundo */
     background-size: cover; /* Ajuste para cobrir toda a tela */
     color: #333;
     display: flex;
