--- a/css/styles.css
+++ b/css/styles.css
@@ -70,13 +70,14 @@ header {
 .side-menu {
     position: fixed;
     top: 0;
-    left: -300px; /* Posição inicial fora da tela */
-    width: 283px;
+    left: -300px; /* Fora da tela inicialmente */
+    width: 300px;
     height: 100%;
-    background-color: #3b261b;
+    background: #3b261b;
     color: white;
     z-index: 1000;
-    transition: left 0.3s ease-in-out;
+    transition: left 0.4s ease; /* Suaviza a animação */
+    overflow-y: auto;
 }
 
 .side-menu.active {
@@ -92,6 +93,15 @@ header {
     background: none;
     border: none;
     cursor: pointer;
+}
+
+.menu-button {
+    font-size: 1.2rem;
+    color: white;
+    background: none;
+    border: none;
+    cursor: pointer;
+    z-index: 2000;
 }
 
 /* Botão "X" */
