--- a/css/styles.css
+++ b/css/styles.css
@@ -8,21 +8,27 @@
 body {
     font-family: 'Arial', sans-serif;
     line-height: 1.6;
-    background: url('../images/fundo-textura.jpg') no-repeat center center fixed; /* Caminho da sua imagem de fundo */
-    background-size: cover; /* Ajuste para cobrir toda a tela */
+    background: url('../images/fundo-textura.jpg') no-repeat center center fixed;
+    background-size: cover;
     color: #333;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    margin: 0;
+    overflow: hidden; /* Remove barra de rolagem */
 }
-
 
 main {
     flex: 1;
-    padding: 40px 20px; /* Espaçamento ao redor do conteúdo principal */
-    background: rgba(255, 255, 255, 0.8); /* Fundo branco com transparência */
-    border-radius: 10px; /* Bordas arredondadas */
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); /* Sombras leves para destacar */
+    padding: 20px; /* Reduz o espaçamento ao redor */
+    background: rgba(255, 255, 255, 0.8);
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    height: calc(100vh - 120px); /* Calcula o espaço restante sem o cabeçalho e rodapé */
 }
 
 /* Cabeçalho */
