--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,13 @@
 body {
     font-family: 'Arial', sans-serif;
     line-height: 1.6;
-    background-color: #f8f9fa;
+    background: url('../images/fundo-textura.jpg') no-repeat center center fixed;
+    background-size: cover;
     color: #333;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    margin: 0;
 }
 
 main {
