--- a/css/cart.css
+++ b/css/cart.css
@@ -9,10 +9,12 @@ body {
     font-family: 'Arial', sans-serif;
     line-height: 1.6;
     background: url('../images/fundo-textura.jpg') no-repeat center center fixed;
+    background-size: cover;
     color: #333;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    margin: 0;
 }
 
 main {
