--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -7,9 +7,14 @@
 
 body {
     font-family: 'Arial', sans-serif;
-    background: url('../images/fundo-textura.jpg') no-repeat center center fixed;
-    color: #333;
     line-height: 1.6;
+    background: url('../images/fundo-textura.jpg') no-repeat center center fixed;
+    background-size: cover;
+    color: #333;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
 }
 
 /* Cabeçalho */
