--- a/css/login.css
+++ b/css/login.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Parkinsans:wght@400;700&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -6,7 +7,7 @@
 
 /* Estilização geral */
  body {
-    font-family: Arial, sans-serif;
+    font-family: 'Parkinsans', sans-serif;
     background: url('../images/fundo-textura.jpg') no-repeat center center fixed;
     background-size: cover;
     height: 100vh;
@@ -15,6 +16,22 @@
     align-items: center;
     margin: 0;
     flex-direction: column;
+}
+
+.page-title {
+    font-size: 1.8rem; /* Tamanho ajustado */
+    font-weight: bold; /* Negrito para destaque */
+    color: white; /* Cor do texto */
+    padding: 10px 20px; /* Espaçamento interno */
+    background: linear-gradient(200deg, #3b261b, #a85f38); /* Gradiente de fundo */
+    border-radius: 8px; /* Bordas arredondadas */
+    text-align: center; /* Centraliza o texto dentro do elemento */
+    display: inline-block; /* Ajusta o fundo ao tamanho do texto */
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2); /* Sombra */
+    margin: 20px auto; /* Centraliza horizontalmente e dá espaçamento vertical */
+    position: relative; /* Para evitar conflitos de posicionamento */
+    left: 50%; /* Empurra o elemento para o meio */
+    transform: translateX(-50%); /* Corrige o deslocamento do `left` */
 }
 
 /* Cabeçalho com a logo */
