--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -43,19 +43,23 @@ body {
     position: sticky;
     top: 0;
     z-index: 1000;
-}
-
-.header .container {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between; /* Alinha os itens nas extremidades */
 }
 
 .header h1 {
-    font-size: 24px;
-    font-weight: bold;
-    margin: 0;
-    text-transform: uppercase;
+    font-size: 30px;
+    color: white;
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.header img {
+    height: 150px; /* Ajusta o tamanho da logo */
+    margin: 0 auto; /* Centraliza horizontalmente */
+    order: 2; /* Posiciona a logo no centro */
 }
 
 .header .btn {
@@ -65,11 +69,9 @@ body {
     background-color: #dc3545;
     border: none;
     transition: background-color 0.3s ease;
+    order: 3; /* Coloca o botão de logout no canto direito */
 }
 
-.header .btn:hover {
-    background-color: #c82333;
-}
 
 /* Conteúdo */
 .container {
