--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -59,6 +59,7 @@ body {
 .header img {
     height: 150px; /* Ajusta o tamanho da logo */
     margin: 0 auto; /* Centraliza horizontalmente */
+    filter: drop-shadow(2px 2px 20px white);
     order: 2; /* Posiciona a logo no centro */
 }
 
