--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ header {
 }
 
 .header .logo img {
-    filter: drop-shadow(2px 2px 20px white);
+    filter: drop-shadow(2px 2px 20px #daa520);
     max-height: 200px;
 }
 
