--- a/css/login.css
+++ b/css/login.css
@@ -48,7 +48,7 @@
 
 .header img {
     height: 200px;
-    filter: drop-shadow(2px 2px 20px white);
+    filter: drop-shadow(2px 2px 20px #daa520);
 }
 
 /* Caixa de login */
